Bug 445589 - Unable to only use the external display because plasmashell won't show panels on it
Summary: Unable to only use the external display because plasmashell won't show panels...
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: multi-screen (show other bugs)
Version: git master
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2021-11-16 13:23 UTC by Fushan Wen
Modified: 2021-11-16 23:45 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed In:
qydwhotmail: X11+


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Fushan Wen 2021-11-16 13:23:02 UTC
SUMMARY
I have a laptop display and an external display. Usually I close the lid to disable the laptop display. However, recently I find that every time I log in, I have to restart plasmashell to make the panel show on my external display.

That's because the panel is moved to the laptop display which is disabled at login. If I open the lid, the panel will show on the laptop display. BUT it should be shown on the external display because the lid is closed at login.

STEPS TO REPRODUCE
1. Log out
2. Log in

OBSERVED RESULT
Panels doesn't show up on the external display, but on the disabled laptop display.

EXPECTED RESULT
Panels show up on the external display.

SOFTWARE/OS VERSIONS
Operating System: openSUSE Tumbleweed 20211111
KDE Plasma Version: 5.23.80
KDE Frameworks Version: 5.89.0
Qt Version: 5.15.2
Kernel Version: 5.14.14-2-default (64-bit)
Graphics Platform: X11
Processors: 8 × AMD Ryzen 7 4700U with Radeon Graphics
Memory: 15.0 GiB of RAM
Graphics Processor: AMD RENOIR

ADDITIONAL INFORMATION
Comment 2 Bug Janitor Service 2021-11-16 16:14:48 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/1204
Comment 3 Aleix Pol 2021-11-16 23:45:12 UTC
Git commit 468a59cbb3a507e7efc29ece9fa0386d6271efb7 by Aleix Pol.
Committed on 16/11/2021 at 16:48.
Pushed by fusionfuture into branch 'master'.

shell: Make sure the primary output is initialised on X11 as well

M  +4    -0    shell/primaryoutputwatcher.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/468a59cbb3a507e7efc29ece9fa0386d6271efb7