shell: Make sure the primary output is initialised on X11 as well

BUG: 445589